Changelog
=========

2.2.0 (unreleased)
------------------

- Ensure FTI's isConstructionAllowed method returns a boolean.
  [danjacka]

- Hide the Dublin Core tab and show the Properties tab for
  items when viewed in the ZMI.
  [davisagli]

- Avoid storing dublin core metadata on new instances unless it
  differs from the default values.
  [davisagli]

- Implement CMF's dublin core interfaces inline rather than
  depending on CMFDefault.
  [davisagli]

- Support GenericSetup structure import/export of Dexterity content.
  Content is serialized the same way as for WebDAV,
  using plone.rfc822. Not all field types are supported yet,
  but this at least gets the basics in place.

  GS import used to work by accident in a basic way for Dexterity
  containers. If you were using this, you'll need to recreate your
  exported files with the rfc822 serialization.
  [davisagli]

- Creator accessor should return encoded strings
  If your catalog was broken, try to clear & reindex Creator::

    cat.clearIndex('Creator')
    cat.manage_reindexIndex(['Creator'])

  [kiorky]

- Use the same message string for the default fieldset as Archetypes does.
  [davisagli]

2.1.3 (2013-05-26)
------------------

- Fail gracefully when a schema lookup fails due to schema that doesn't
  exist or no longer exists for some reason or another.
  [eleddy]


2.1.2 (2013-03-05)
------------------

- Merged Rafael Oliveira's (@rafaelbco) @content-core views from
  collective.cmfeditionsdexteritycompat.
  [rpatterson]

2.1.1 (2013-01-17)
------------------

* No longer add title and description fields to new FTIs by default.
  [davisagli, cedricmessiant]

* When pasting into a dexterity container check the FTI for the the pasted
  object to see if it is allowed in the new container.
  [wichert]

* Fixed schema caching. Previously, a non-persistent counter would be
  used as part of the cache key, and changes made to this counter in
  one process would obviously not propagate to other processes.
